Harden test resources keepalive handling
Co-Authored-By: Paperclip <noreply@paperclip.ing>